# rusty_ulid

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  code-of-conduct.md  justfile
.github/workflows/: rust.yml
benches/: my_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_from_byte_array.rs  fuzz_from_bytes.rs  fuzz_from_str.rs
src/: crockford.rs  lib.rs  main.rs  rocket_.rs  schemars.rs
tests/: rocket.rs  schemars.rs
tests/expected/: ulid.json
