# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rusty_ulid"
version = "0.7.0"  # remember to update html_root_url in src/lib.rs
description = "Rust ULID (Universally Unique Lexicographically Sortable Identifier) generation and processing"
authors = ["Joern Huxhorn <jhuxhorn@googlemail.com>"]
repository = "https://github.com/huxi/rusty_ulid"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

keywords = ["ulid", "uuid", "sortable", "identifier"]
categories = ["data-structures","date-and-time","encoding","parsing","value-formatting"]

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional.
default = ["serde"]

[dependencies]
rand = "0.6"
chrono = "0.4"
serde = {version ="1", optional = true}

[dev-dependencies]
criterion = "0.2"
serde_test = "1"

[[bench]]
name = "my_benchmark"
harness = false
