# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rusty_ulid"
# remember to update html_root_url in src/lib.rs
version = "2.0.0"
description = "Rust ULID (Universally Unique Lexicographically Sortable Identifier) generation and processing"
authors = ["Joern Huxhorn <jhuxhorn@googlemail.com>"]
repository = "https://github.com/huxi/rusty_ulid"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.60"

keywords = ["ulid", "uuid", "sortable", "identifier"]
categories = [
    "data-structures",
    "date-and-time",
    "encoding",
    "parsing",
    "value-formatting",
]

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional.
default = ["rand", "time", "serde"]

[dependencies]
rand = { version = "0.8", optional = true }
time = { version = "0.3", optional = true, default_features = false, features = ["std", "formatting"] }
chrono = { version = "0.4", optional = true, default_features = false, features = ["std", "clock"] }
serde = { version = "1", optional = true }
schemars = { version = "0.8", optional = true }
rocket = { version = "0.5.0-rc.2", optional = true}

[dev-dependencies]
criterion = "0.5"
doc-comment = "0.3"
serde_test = "1"
# used for schemars test
serde_json = "1.0"
pretty_assertions = "1.2.1"

[[bench]]
name = "my_benchmark"
harness = false

[[test]]
name = "schemars"
required-features = ["schemars"]

[[test]]
name = "rocket"
required-features = ["rocket"]
