[package]
name = "rusty_ulid-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rusty_ulid]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_from_str"
path = "fuzz_targets/fuzz_from_str.rs"

[[bin]]
name = "fuzz_from_byte_slice"
path = "fuzz_targets/fuzz_from_byte_slice.rs"

[[bin]]
name = "fuzz_from_byte_array"
path = "fuzz_targets/fuzz_from_byte_array.rs"
